# ccBench

./: .gitignore  README.md  USER_GUIDE.md  ccBench.py  pyproject.toml  test_ccBench.py
config_forge/claude_code/: run.sh
config_forge/claude_code/.claude/: settings.json
config_forge/claude_code_models_via_portkey/: .env.sample
config_forge/deepseek_v32_for_claude_code/: .env.sample
config_forge/portkey_for_claude_code/: .env.sample
config_forge/tdd_guard_for_claude_code/: pyproject.toml  setup.sh
config_forge/tdd_guard_for_claude_code/.claude/: settings.json
evals/claude_code_metrics/: run.sh
evals/cloc/: run.sh
experiments/: deepseek_vs_sonnet_on_aoc.yaml  example.yaml  simple.yaml  tdd_guard_comparison.yaml  two_tasks.yaml
tasks/aoc_2025_01/: prompt.md  task.md
tasks/aoc_2025_02/: prompt.md  task.md
