[project]
name = "ccbench"
version = "0.1.0"
description = "A versatile evaluation suite for coding agents."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyyaml", "tomli-w>=1.2.0"]

[tool.ruff]
line-length = 94

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.8", "ty>=0.0.1a32"]

[tool.ruff.lint]
extend-ignore = ["E501"]
select = ["E", "F", "W", "C90", "B", "B9", "I"]

[tool.ty.environment]
root = ["."]
